# SCodes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: detailsQt6.md
examples/QmlBarcode/: Qt5qml.qrc  Qt6qml.qrc  main.cpp
examples/QmlBarcode/qml/: CTabButton.qml  GeneratorPage.qml  Qt5ScannerOverlay.qml  Qt5ScannerPage.qml  Subtrack.qml  Theme.qml  main.qml
examples/QmlBarcode/shaders/: subtrack.frag  subtrack.vert
examples/QmlBarcodeApp/: CMakeLists.txt  ColorController.cpp  ColorController.h  FormatHelper.cpp  FormatHelper.h  QmlBarcodeApp.pro  Qt5qml.qrc  Qt6qml.qrc  VersionHelper.h  main.cpp
examples/QmlBarcodeApp/android/: AndroidManifest.xml
examples/QmlBarcodeApp/android/res/values/: strings.xml
examples/QmlBarcodeApp/cmake/: Locations.cmake
examples/QmlBarcodeApp/qml/: CButton.qml  CComboBox.qml  CTabButton.qml  CTextField.qml  GeneratorPage.qml  Qt5ScannerPage.qml  Qt6ScannerPage.qml  ScannerOverlay.qml  Subtrack.qml  Theme.qml  main.qml
examples/QmlBarcodeGenerator/: CMakeLists.txt
examples/QmlBarcodeReader/: CMakeLists.txt
examples/QmlBarcodeReader/qml/: Qt6ScannerPage.qml
src/: CMakeLists.txt  SBarcodeFilter.cpp  SBarcodeFilter.h  SBarcodeFormat.h  SBarcodeGenerator.cpp  SBarcodeGenerator.h  SBarcodeScanner.cpp  SBarcodeScanner.h  SCodes.pri
tests/: CMakeLists.txt  test_SBarcodeFormat.cpp  test_SBarcodeGenerator.cpp
